--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,12 +3,12 @@
     "name": "ToDo WebApp",
     "icons": [
       {
-        "src": "https://i.postimg.cc/5yChyKxy/IMG-3061.png",
+        "src": "https://i.postimg.cc/sXhtTHtz/9-B0-CFD8-F-E1-E4-478-C-88-DE-C1-ABDDAEBCED-removebg-preview.png",
         "type": "image/png",
         "sizes": "192x192"
       },
       {
-        "src": "https://i.postimg.cc/5yChyKxy/IMG-3061.png",
+        "src": "https://i.postimg.cc/sXhtTHtz/9-B0-CFD8-F-E1-E4-478-C-88-DE-C1-ABDDAEBCED-removebg-preview.png",
         "type": "image/png",
         "sizes": "512x512"
       }
